<resources>
    <string name="app_name">Just Java</string>
    <string name ="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="cream_topping">Whipped Cream</string>
    <string name="chocolate_topping">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_sum">Order Summary</string>
    <string name="order_submit">Order</string>
    <string name="coffee_order">Coffee order</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you</string>
    <string name="too_many">You cannot order more than 10 coffees</string>
    <string name="too_little">You cannot order less than 1 coffee</string>
</resources>
